[gd_scene load_steps=2 format=3 uid="uid://beisuc8wuyfst"]

[ext_resource type="Script" path="res://Scripts/StartMenus/options_menu.gd" id="1_vf36u"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vf36u")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -187.0
offset_top = -100.0
offset_right = 1.0
offset_bottom = 7.0
grow_vertical = 0
scale = Vector2(2, 2)

[node name="VolumeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="UnusedButton1" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "(Unused)"

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="VBoxContainer/VolumeButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VolumeButton" to="." method="_on_volume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/UnusedButton1" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/UnusedButton1" to="." method="_on_unused_button_1_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
